@@ -1,4 +1,5 @@
 2012-11-13
+ * block until visible queue option
  * target_constraints_with_name
 
 2012-11-09
